test/data/resolver/valid/parameter_clause_slot_skip.cypher
MATCH (p:Person) RETURN p.name SKIP $offset
