test/data/resolver/invalid/parameter_type_conflict_clause_slot_vs_string.cypher
MATCH (p:Person) WHERE p.name = $x RETURN p.name SKIP $x
